--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
 }
+.app-title {
+  margin: 1em auto;
+}
 form {
   width: 100%;
   margin: 2em auto 1em auto;
@@ -11,43 +14,28 @@ form {
   height: 40px;
   width: 200px;
   font-size: 1.2em;
-
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 1px 8px;
 }
 .cityInfo {
-  font-weight: 600;
-  font-size: 1.3em;
-  margin: 0.5em auto;
+  font-weight: bold;
+  font-size: 1.2em;
+  margin: 1em auto 2em auto;
 }
 .temp-list {
   width: 70%;
-  margin: 0 auto;
-  
+  margin: 0 auto; 
 }
-.temp {
+.list-item {
   margin: 5px auto;
   display: flex;
   text-align: left;
 }
-.temp .item {
+.list-item:nth-child(odd) {
+  background-color: #f2f4f7;
+}
+.list-item .item {
   width: 50%;
   padding-left: 25%;
-}
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
